[package]
name = "honeybee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
dirs-sys = "0.4"
futures = "0.3"
serde_json = "1.0"
serde_with = "2.3"
shellexpand = "3.1"
smart-default = "0.6"
toml = "0.7"

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.tokio]
version = "1.26"
features = ["fs", "io-std", "io-util", "macros", "rt", "sync", "time"]