[package]
name = "honeybee"
description = "A port of the original i3status written in Rust."
repository = "https://github.com/csixteen/honeybee/"
readme = "README.md"
version = "0.9.0-alpha2"
edition = "2021"
license = "MIT"
authors = ["Pedro Rodrigues <csixteen@proton.me>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytes = "1.4"
chrono-tz = "0.8"
dirs = "5.0"
dirs-sys = "0.4"
futures = "0.3"
glob = "0.3"
libc = "0.2"
nix = "0.26"
serde_json = "1.0"
serde_with = "3.0"
shellexpand = "3.1"
smart-default = "0.7"
syn = "2.0"
toml = "0.7"

[dependencies.clap]
version = "4.2"
default-features = false
features = ["std", "derive", "help", "usage"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std", "clock"]

[dependencies.serde]
version = "1.0"
features = ["derive", "rc"]

[dependencies.tokio]
version = "1.26"
features = ["fs", "io-std", "io-util", "macros", "rt", "sync", "time"]